# SDL1_OpenTron_electrodeposition

./: .gitignore  100 -2 Cathodic scan 1x 10mV s-1 dc_data.csv  108 -2 Cathodic scan 1x 10mV s-1 dc_data.csv  108 -3 OCV scan 1x 10mV s-1 dc_data.csv  111 -2 Cathodic scan 1x 10mV s-1 dc_data.csv  113 -1 Electrodeposition dc_data.csv  126 -2 Cathodic scan 1x 10mV s-1 dc_data.csv  126 -3 OCV scan 1x 10mV s-1 dc_data.csv  126 1 CV 25x 200mV s-1 dc_data.csv  126 4 CP 100 mA cm-2 dc_data.csv  126 6 CP 20 mA cm-2 dc_data.csv  126 Ref CV before.csv  126 Ref EIS after.csv  127 -2 Cathodic scan 1x 10mV s-1 dc_data.csv  127 Ref EIS before.csv  30 0 CP 200 mA cm-2 dc_data.csv  30 Ref EIS before.csv  32 3 EIS ac_data.csv  39 Electrodeposition dc_data.csv  40 3 EIS ac_data.csv  40 Electrodeposition dc_data.csv  40 Ref EIS before.csv  44 3 EIS ac_data.csv  44 Ref EIS before.csv  46 3 EIS ac_data.csv  46 Ref EIS before.csv  47 6 CP 20 mA cm-2 dc_data.csv  68 11 CV 2x 10mV s-1 dc_data.csv  68 2 CV 2x 10mV s-1 dc_data.csv  68 3 EIS ac_data.csv  69 1 CV 25x 200mV s-1 dc_data.csv  69 10 CP 1 mA cm-2 dc_data.csv  69 6 CP 20 mA cm-2 dc_data.csv  69 8 CP 5 mA cm-2 dc_data.csv  69 Ref CVAfter.csv  69 Ref EISAfter.csv  70 10 CP 1 mA cm-2 dc_data.csv  70 5 CP 50 mA cm-2 dc_data.csv  70 7 CP 10 mA cm-2 dc_data.csv  72 3 EIS ac_data.csv  (+22 more)
3D_files/: 1_well_catridge_ultrasound_mount v5.step  3_well_cartridge_test_cell v21.step  Cleaning_bath v7.step  cartridge_top v9.step
data/: 100 -1 Electrodeposition dc_data.csv  100 -3 OCV scan 1x 10mV s-1 dc_data.csv  101 -1 Electrodeposition dc_data.csv  (+1400 more)
(+156 files in other folders)
