[metadata]
name = openTron_electrodeposition
author = Nis Fisker-Bødker
version = file: src/python/_version.txt
description = openTron_electrodeposition is a combined control and automated experiment to electro deposit and caracterize the Oxygen Evolution Reaction catalyst performance.

[options]
python_requires = >=3.11
package_dir=
    =src
packages=find:
include_package_data = true
install_requires =
    numpy==1.26.2
    pandas==2.1
    pyserial
    opentronsHTTPAPI_wrapper @ git+https://github.com/dpersaud/opentronsHTTPAPI_wrapper.git
    plotly

[options.extras_require]
dev =
    pre-commit
    black
    flake8

[options.packages.find]
where=src
